feat: amélioration du SEO et ajout des méta-données

--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/chess-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Convertisseur d'ELO</title>
+    
+    <!-- SEO Meta Tags -->
+    <title>Chess Rating Converter - Convert Lichess to Chess.com Ratings</title>
+    <meta name="description" content="Free online tool to convert chess ratings between Lichess and Chess.com. Accurate ELO conversion based on statistical analysis of 35,000+ games. Convert your chess rating instantly!" />
+    <meta name="keywords" content="chess rating converter, lichess to chess.com, chess.com to lichess, elo converter, chess rating calculator, lichess rating, chess.com rating, chess elo conversion" />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://lucasbertola.github.io/chessEloManager/" />
+    <meta property="og:title" content="Chess Rating Converter - Convert Lichess to Chess.com Ratings" />
+    <meta property="og:description" content="Free online tool to convert chess ratings between Lichess and Chess.com. Accurate ELO conversion based on statistical analysis of 35,000+ games." />
+    <meta property="og:image" content="https://lucasbertola.github.io/chessEloManager/chess-preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://lucasbertola.github.io/chessEloManager/" />
+    <meta property="twitter:title" content="Chess Rating Converter - Convert Lichess to Chess.com Ratings" />
+    <meta property="twitter:description" content="Free online tool to convert chess ratings between Lichess and Chess.com. Accurate ELO conversion based on statistical analysis of 35,000+ games." />
+    <meta property="twitter:image" content="https://lucasbertola.github.io/chessEloManager/chess-preview.png" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://lucasbertola.github.io/chessEloManager/" />
+
+    <!-- Additional Meta Tags -->
+    <meta name="author" content="Lucas Bertola" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebApplication",
+        "name": "Chess Rating Converter",
+        "url": "https://lucasbertola.github.io/chessEloManager/",
+        "description": "Free online tool to convert chess ratings between Lichess and Chess.com platforms. Based on statistical analysis of 35,000+ games.",
+        "applicationCategory": "Chess Tool",
+        "operatingSystem": "Any",
+        "author": {
+          "@type": "Person",
+          "name": "Lucas Bertola"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
